# EmotionBot

./: README.md
ArchitectureDesign/: ArchitectureDocument.aux  ArchitectureDocument.out  ArchitectureDocument.tex  ArchitectureDocument.toc  TheatreBot.pptx
ArchitectureDesign/Architecture/: ActionModulation.tex
Decrypt_TheatreBot/Debug/: Decrypt_TheatreBot
Decrypt_TheatreBot/src/action_modulation/: ActionAddition.cpp  ActionAddition.h
Decrypt_TheatreBot/src/general_execution/: SimpleActionExecution.cpp  SimpleActionExecution.h  SimpleActionTrajectoryExecution.cpp
EmotionBot/ArchitectureDesign/Architecture/: Introduction.tex
EmotionBot/Odroid/: README.txt~  interfaces  network-monitor.sh  network-monitor.sh~  ros_configuration.sh
EmotionBot/ROS/theatrebot_action_modulation/: action_modulation.launch  action_modulation_nodes.xml~  action_modulation_test.launch
EmotionBot/TheatreBot/: .cproject  .project
EmotionBot/TheatreBot/Debug/: sources.mk
EmotionBot/TheatreBot/emotion_profile/: angry.json~  content.json  content.json~  happy.json  sad.json  sad.json~
EmotionBot/TriskarDue/: TriskarDue.vcproj
EmotionBot/TriskarTre/MC33887/: MC33887.cpp~  MC33887.h  MC33887.h~
EmotionBot/TriskarTre/PID/: PID_v1.cpp
EmotionBot/TriskarTre/TheatreRobotSmall/: DCMotor.cpp~  DCMotor.h~  TheatrePlatform.h~  TheatreRobotSmall.cpp~  TheatreRobotSmall.h  TheatreUpperPart.h
EmotionBot/TriskarTre/Triskar/: Triskar.cpp  Triskar.h~
Odroid/: README.txt  README.txt~  camera_logitec_c270.yaml  network-monitor.sh  network-monitor.sh~  ros_configuration.sh
ROS/test_action_modulation/: CMakeLists.txt~
ROS/theatre_bot/: CMakeLists.txt  package.xml~  theatre_bot_triskar_small.launch  theatre_bot_triskar_small_no_emotion_new.launch  theatre_bot_triskar_small_no_emotion_new.launch~  theatre_bot_triskar_small_no_emotion_old.launch
ROS/theatre_bot/action_description_test/: sequential_same_action.json
ROS/theatre_bot/debug/: data_reactive_model.txt  emotions_intensities.txt  slope_reactive_model.txt
ROS/theatre_bot/emotion_profile/: angry.json  content.json  happy.json  sad.json
ROS/theatrebot_action_modulation/: CMakeLists.txt  CMakeLists.txt~  action_modulation_nodes.xml  interfaces  interfacest  package.xml  patter_detection.launch  patter_detection.launch~
ROS/theatrebot_action_modulation/emotion_profile/: content.json~
ROS/theatrebot_action_modulation/emotion_profile (copy)/: angry.json  angry.json~  content.json  happy.json  sad.json~
ROS/theatrebot_action_modulation/msg/: ActionDesireMessage.msg  ActionExecutionMessage.msg  EmotionParametersMessage.msg  SyncActionMessage.msg  TriskarInformation.msg  TriskarLinearVelocity.msg
ROS/theatrebot_action_modulation/src/: DecryptAction.cpp  TestNode.cpp
ROS/theatrebot_action_modulation/src/TestNodes/: TestPositionNode.cpp
ROS/theatrebot_action_modulation/src/action_modulation/: ActionAddition.cpp  ActionAddition.h
ROS/theatrebot_action_modulation/src/general_description/action_description/: SequenceAbstractActionDescription.h  SimpleActionDescription.cpp  SimpleActionDescription.h
ROS/theatrebot_action_modulation/src/general_description/action_description/instance_compound_action_description/: OldWalkCompoundAction.cpp  WalkCompoundAction.cpp
ROS/theatrebot_action_modulation/src/general_description/action_description/instance_simple_action_description/: MoveBodySimpleActionDescription.h  OscillateBodyActionDescription.cpp  OscillateShoulderDescription.cpp  OscillateShoulderDescription.h
ROS/theatrebot_action_modulation/src/general_description/parameters_description/parameters_instances/: AreaPositionParameter.cpp  ParameterAcceleration.h  ParameterVelocity.cpp  PointPositionParameter.h
ROS/theatrebot_action_modulation/src/general_description/platform_description/: PlatformDescription.cpp
ROS/theatrebot_action_modulation/src/general_execution/: SimpleActionExecution.cpp
ROS/theatrebot_action_modulation/src/general_execution/action_execution/: MoveBodyExecution.h  MoveShoulderExecution.h  MoveTorsoExecution.cpp  NotDoAnythingExecution.h  OscillateBodyExecution.cpp  OscillateShoulderExecution.h  OscillateTorsoExecution.cpp  SpeakExecution.h
ROS/theatrebot_action_modulation/src/instances/actions/: ActionTest1.h
ROS/theatrebot_action_modulation/src/instances/emotion_profiles/: EmotionTest1.cpp
ROS/theatrebot_action_modulation/src/instances/platform_profiles/: PlatformTest1.cpp  PlatformTest1.h
ROS/theatrebot_action_modulation/src/interface_test/: .interface.py.swp
ROS/theatrebot_action_modulation/src/platform_action_execution/: AbstractPlatformExecution.h
ROS/theatrebot_action_modulation/src/simple_action_nodes/: SimpleActionOscillateShoulderNode.cpp
ROS/theatrebot_action_modulation/src/triskar_small/: Planning.cpp
TheatreBot/Debug/: TheatreBot  makefile
TheatreBot/action_description_test/: parallel_action_keepon_test_1.json  sequential_parallel_keepon.json
TheatreBot/debug/: emotions_intensities.txt
TheatreBot/emotion_profile/: fear.json  happy.json  happy.json~
TheatreBot/launch_xml/: pattern_detection.xml
TheatreBot/nodes/: NodeActionModulation.cpp  NodeBodyActionExecution.cpp  NodeShoulderActionExecution.h
TheatreBot/robot_configuration_files/: README.txt  robot_initial_position.json  scene_description.json
TriskarDue/: TriskarDue.ino  TriskarDue.ncb
TriskarDue/Visual Micro/: .TriskarDue.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml
TriskarTre/: README.txt  README.txt~  TriskarTre.ino
TriskarTre/MC33887/: MC33887.cpp
TriskarTre/TheatreRobotSmall/: BodyController.cpp  BodyController.cpp~  BodyController.h  BodyController.h~  DCMotor.cpp  DCMotor.cpp~  DCMotor.h  TheatrePlatform.cpp  TheatrePlatform.cpp~  TheatrePlatform.h  TheatrePlatform.h~  TheatreRobotSmall.cpp  TheatreRobotSmall.cpp~  TheatreRobotSmall.h  TheatreRobotSmall.h~  TheatreUpperPart.h  TheatreUpperPart.h~  ThreatreUpperPart.cpp  ThreatreUpperPart.cpp~
TriskarTre/Triskar/: Triskar.cpp~  Triskar.h
TriskarTre/TriskarTre-0-1/: TriskarTre-0-1.ino
TriskarTrePID/: TriskarTrePID.ino
(+347 files in other folders)
